--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,12 @@
     <h3>Navigation</h3>
     <p>
         <a href="/">Home</a><br>
-        <a href="/aktuelles">Aktuelles</a><br>
         <a href="/termine">Termine</a><br>
         <a href="/ueber-uns">Über uns</a><br>
+        <a href="/standpunkte">Standpunkte</a><br>
+        <a href="/kontakt">Kontakt</a><br>
+        <a href="/unterstuetzung">Unterstützung</a><br>
+        <a href="/archiv">Archiv</a>
     </p>
     <h3>Weiterführende Links</h3>
     <p>
