--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 
 html {
     overflow-x: hidden;
-    font-weight: 400;
 }
 
 body {
@@ -18,6 +17,7 @@ body {
     font-family: "Inter";
     font-weight: 400;
     margin: 0;
+    word-break: break-word;
 }
 
 main {
@@ -25,7 +25,7 @@ main {
 }
 
 #content {
-    max-width: 512px;
+    max-width: 768px;
     margin: auto;
 }
 
@@ -35,7 +35,8 @@ header, nav, main, footer {
 }
 
 .post {
-    padding: var(--main-padding);
+    padding-top: var(--main-padding);
+    padding-bottom: var(--main-padding);
     position: relative;
 }
 
@@ -46,7 +47,7 @@ header, nav, main, footer {
 .post .background {
     position: absolute;
     top: 0;
-    left: calc(var(--main-padding) * -1);
+    left: calc(50% - 50vw);
     width: 100vw;
     height: 100%;
     background-position: center;
@@ -151,6 +152,7 @@ nav a, footer a {
 }
 
 nav > a {
+    padding: 4px;
     padding-left: 8px;
     padding-right: 8px;
     text-decoration: none;
@@ -170,7 +172,11 @@ h2 {
 }
 
 h3 {
-    font-size: 16px;
+    font-size: 24px;
+}
+
+summary {
+    font-weight: 600;
 }
 
 main img {
@@ -188,17 +194,41 @@ a.button, button {
     color: white;
     text-decoration: none;
     border: none;
+    font-size: 16px;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+button.inline {
+    padding: 0;
+    margin: 0;
+    background: none;
+    color: var(--primary-color);
+    text-decoration: underline;
+    font-size: 16px;
+    text-align: left;
 }
 
 .event {
-    display: flex;
-    justify-content: space-between;
+    /*display: flex;
+    justify-content: space-between;*/
     border-bottom: 1px solid black;
 }
 
 .event:first-of-type {
     border-top: 1px solid black;
 }
+
+.archived {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border-bottom: 1px solid black;
+}
+
+.archived:first-of-type {
+    border-top: 1px solid black;
+}
+
 
 .event .date {
     margin-right: 16px;
@@ -209,6 +239,23 @@ iframe {
     width: 100vw;
     height: 60vh;
     border: none;
+}
+
+figure {
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    background: var(--secondary-color);
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+figure > img {
+    width: 100%;
+}
+
+figcaption {
+    padding: 16px;
 }
 
 @media only screen and (min-width: 512px) {
@@ -226,5 +273,13 @@ iframe {
 
     nav {
         justify-content: center;
+    }
+
+    figure {
+        flex-wrap: nowrap;
+    }
+
+    figure > img {
+        width: 192px;
     }
 }
