add more content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,20 +1,22 @@
 <footer>
-    <h3>Navigation</h3>
-    <p>
-        <a href="/">Home</a><br>
-        <a href="/termine">Termine</a><br>
-        <a href="/ueber-uns">Über uns</a><br>
-        <a href="/standpunkte">Standpunkte</a><br>
-        <a href="/kontakt">Kontakt</a><br>
-        <a href="/unterstuetzung">Unterstützung</a><br>
-        <a href="/archiv">Archiv</a>
-    </p>
-    <h3>Weiterführende Links</h3>
-    <p>
-        <a href="https://www.instagram.com/sp.sursee/">Instagram</a><br>
-        <a href="https://www.facebook.com/spsursee/">Facebook</a><br>
-        <a href="https://www.sp-ps.ch/mitglied-werden/">Mitglied werden</a><br>
-        <a href="https://sp-luzern.ch/de">SP Kanton Luzern</a><br>
-        <a href="http://sp-ps.ch/">SP Schweiz</a>
-    </p>
+    <div class="content">
+        <h3>Navigation</h3>
+        <p>
+            <a href="/">Home</a><br>
+            <a href="/termine">Termine</a><br>
+            <a href="/ueber-uns">Über uns</a><br>
+            <a href="/standpunkte">Standpunkte</a><br>
+            <a href="/kontakt">Kontakt</a><br>
+            <a href="/mitmachen">Mitmachen</a><br>
+            <a href="/archiv">Archiv</a>
+        </p>
+        <h3>Weiterführende Links</h3>
+        <p>
+            <a href="https://www.instagram.com/sp.sursee/">Instagram</a><br>
+            <a href="https://www.facebook.com/spsursee/">Facebook</a><br>
+            <a href="https://www.sp-ps.ch/mitglied-werden/">Mitglied werden</a><br>
+            <a href="https://sp-luzern.ch/de">SP Kanton Luzern</a><br>
+            <a href="http://sp-ps.ch/">SP Schweiz</a>
+        </p>
+    </div>
 </footer>
