--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,4 +2,5 @@
     <a href="/">Home</a>
     <a href="/termine">Termine</a>
     <a href="/ueber-uns">Über uns</a>
+    <a href="/mitmachen">Mitmachen</a>
 </nav>
