--- a/_includes/header-title.html
+++ b/_includes/header-title.html
@@ -1,4 +1,8 @@
 <div id="header-title">
-    <img src="/assets/sp-logo-negative.png">
-    <h1 id="title">SP Sursee<br>und Umgebung</h1>
+    <div class="content">
+        <div id="header-title-inner">
+            <img src="/assets/sp-logo-negative.png">
+            <h1 id="title">SP Sursee<br>und Umgebung</h1>
+        </div>
+    </div>
 </div>
