--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
         </header>
         {% include nav.html %}
         <main id="main">
-            <div id="content">
+            <div class="content">
                 {{ content }}
             </div>
         </main>
