--- a/_layouts/landingpage.html
+++ b/_layouts/landingpage.html
@@ -8,7 +8,7 @@
         </header>
         {% include nav.html %}
         <main id="main">
-            <div id="content">
+            <div class="content">
                 {{ content }}
             </div>
         </main>
