--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ main {
     background: white;
 }
 
-#content {
+.content {
     max-width: 768px;
     margin: auto;
 }
@@ -115,20 +115,26 @@ header {
 }
 
 #header-title {
-    box-sizing: border-box;
     position: absolute;
     bottom: 0;
     left: 0;
+    background-color: var(--primary-color);
+    color: white;
+    box-sizing: border-box;
     width: 100%;
     height: 128px;
     padding: 32px;
+}
+
+#header-title-inner {
     display: flex;
     justify-content: flex-start;
     align-content: center;
     gap: 32px;
-    background-color: var(--primary-color);
-    color: white;
     flex-grow: 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: 64px;
 }
 
 nav {
@@ -156,6 +162,14 @@ nav > a {
     padding-left: 8px;
     padding-right: 8px;
     text-decoration: none;
+}
+
+nav > a:first-of-type {
+    padding-left: 0;
+}
+
+nav > a:last-of-type {
+    padding-right: 0;
 }
 
 h1, h2, h3 {
@@ -187,7 +201,7 @@ a {
     color: var(--text-color);
 }
 
-a.button, button {
+a.button, button, input[type=submit] {
     background: var(--primary-color);
     padding: 12px;
     display: inline-block;
@@ -283,3 +297,22 @@ figcaption {
         width: 192px;
     }
 }
+
+form {
+    padding: 16px;
+    background: var(--secondary-color);
+}
+
+label {
+    width: 100%;
+    display: block;
+}
+
+input {
+    width: 100%;
+    display: block;
+    box-sizing: border-box;
+    padding: 12px;
+    border: none;
+}
+
