--- a/_layouts/initiative.html
+++ b/_layouts/initiative.html
@@ -18,8 +18,8 @@
             {% endif %}
         </header>
         {% if page.logos %}
-            <nav>
-                <a href="#main">Mehr lesen</a>
+            <nav style="position: static;">
+                <a href="#main">&#x25BC;</a>
             </nav>
         {% else %}
             {% include nav.html %}
@@ -34,7 +34,7 @@
         {% if page.logos %}
             <footer>
                 <p>Dies ist eine Website der SP Sursee.</p>
-                <a href="/">Zurück zur Homepage</a><br>
+                <a href="/">SP Sursee</a><br>
             </footer>
         {% else %}
             {% include footer.html %}
