--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,12 @@
         <h3>Navigation</h3>
         <p>
             <a href="/">Home</a><br>
-            <a href="/termine">Termine</a><br>
-            <a href="/ueber-uns">Über uns</a><br>
-            <a href="/mitmachen">Mitmachen</a><br>
-            <a href="/standpunkte">Standpunkte</a><br>
-            <a href="/kontakt">Kontakt</a><br>
-            <a href="/archiv">Archiv</a>
+            <a href="/termine.html">Termine</a><br>
+            <a href="/ueber-uns.html">Über uns</a><br>
+            <a href="/mitmachen.html">Mitmachen</a><br>
+            <a href="/standpunkte.html">Standpunkte</a><br>
+            <a href="/kontakt.html">Kontakt</a><br>
+            <a href="/archiv.html">Archiv</a>
         </p>
         <h3>Weiterführende Links</h3>
         <p>
