--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav>
     <a href="/">Home</a>
-    <a href="/termine">Termine</a>
-    <a href="/ueber-uns">Über uns</a>
-    <a href="/mitmachen">Mitmachen</a>
+    <a href="/termine.html">Termine</a>
+    <a href="/ueber-uns.html">Über uns</a>
+    <a href="/mitmachen.html">Mitmachen</a>
 </nav>
