--- a/style.css
+++ b/style.css
@@ -47,12 +47,12 @@ header, nav, main, footer {
 .post .background {
     position: absolute;
     top: 0;
-    left: calc(50% - 50vw);
-    width: 100vw;
+    left: calc(var(--main-padding) * -1);
+    width: calc(100% + var(--main-padding) * 2);
     height: 100%;
     background-position: center;
     background-size: cover;
-    filter: opacity(30%);
+    filter: opacity(20%);
 }
 
 .background-animated {
