--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
         </header>
         {% include nav.html %}
         <main id="main">
-            <div id="content">
+            <div class="content">
                 <h2>{{ page.title }}</h2>
                 <p>{{ page.description }}</p>
                 {{ content }}
