--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ header, nav, main, footer {
 .post {
     padding-top: 32px;
     padding-bottom: 32px;
+    margin-top: 32px;
+    margin-bottom: 32px;
     position: relative;
 }
 
