--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi">
     <meta name="description" content="{{ site.description }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
     <link rel="stylesheet" type="text/css" href="/style.css">
     <script src="/assets/scripts/FileSaver.js"></script>
     <script src="/assets/scripts/ics.js"></script>
