--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,5 +18,6 @@
             <a href="https://sp-luzern.ch/de">SP Kanton Luzern</a><br>
             <a href="http://sp-ps.ch/">SP Schweiz</a>
         </p>
+        <button onclick="printPreview()">Flyer erstellen</button>
     </div>
 </footer>
