--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
+---
+---
 <footer>
     <div class="content">
         <h3>Navigation</h3>
@@ -8,7 +10,8 @@
             <a href="/mitmachen.html">Mitmachen</a><br>
             <a href="/standpunkte.html">Standpunkte</a><br>
             <a href="/kontakt.html">Kontakt</a><br>
-            <a href="/archiv.html">Archiv</a>
+            <a href="/archiv.html">Archiv</a><br>
+            <a href="/print.html">Soorsi Poscht</a>
         </p>
         <h3>Weiterführende Links</h3>
         <p>
@@ -18,6 +21,5 @@
             <a href="https://sp-luzern.ch/de">SP Kanton Luzern</a><br>
             <a href="http://sp-ps.ch/">SP Schweiz</a>
         </p>
-        <button onclick="printPreview()">Flyer erstellen</button>
     </div>
 </footer>
